# PyTelegramClientCopier

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: WORKER_TROUBLESHOOTING.md  dev-cheatsheet.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccountStatusBadge.tsx  AccountTableActions.tsx  AccountTypeBadge.tsx  AddAccountDialog.tsx  AddMappingDialog.tsx  ChangePasswordDialog.tsx  ChangePasswordSection.tsx  ConfirmDialog.tsx  CreateUserDialog.tsx  EditAccountDialog.tsx  EditMappingDialog.tsx  EditUserDialog.tsx  FilterForm.tsx  LogLevelBadge.tsx  MappingEnableToggle.tsx  MappingFormFields.tsx  MappingScheduleForm.test.tsx  PageHeader.tsx  (+14 more)
scripts/: deploy-ubuntu.sh  update-vps.sh
src/app/: config.py  main.py  worker.py  worker_log_handler.py
tests/: conftest.py
tests/api/: conftest.py  test_admin_users.py  test_auth_change_password.py  test_auth_profile.py  test_filters_api.py  test_media_assets_api.py  test_message_logs_api.py  test_response_contracts.py  test_schedules_api.py  test_stats_api.py  test_transforms_api.py  test_workers_api.py
tests/functional/: test_functional_smoke.py  test_handler_flow.py
tests/integration/: test_integration_smoke.py  test_mapping_service.py  test_mongo.py  test_mongo_indexes.py  test_reply_mapping.py  test_telethon_live.py  test_worker_restore.py
tests/unit/: test_app_settings.py  test_filters.py  test_migrations.py  test_schedules.py  test_transforms.py  test_unit_smoke.py  test_worker_log_handler.py
(+80 files in other folders)
